examples/refinements/pattern_basic_fail.an

extern assert: b:bool -> unit & b

match Some 4
| Some n -> assert (n == 3)
| None -> assert false

// TODO: Fix extern collecting named types as extern symbols.
//       Shown in the output of `b` below as a symbol in global scope
//       instead of function scope to `assert`

// args: --check --show-refinements
// expected stderr:
// error: line 5,   failed to prove 4 == 3...
